charts/nodey471/resources/deployment.yaml
---
# Source: nodey471/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodey471-nodey471
  labels:
    draft: draft-app
    chart: "nodey471-1.0.3"
spec:
  selector:
    matchLabels:
      app: nodey471-nodey471
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: nodey471-nodey471
    spec:
      containers:
      - name: nodey471
        image: "gcr.io/jstrachan-multicluster/nodey471:1.0.3"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
