charts/nodey471/resources/service.yaml
---
# Source: nodey471/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodey471
  labels:
    chart: "nodey471-1.0.3"
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: nodey471-nodey471
